--- a/Elliptic2/Elliptic2.csproj
+++ b/Elliptic2/Elliptic2.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F954EAAE-117F-43C7-BBF9-5FC77ED09855}</ProjectGuid>
+    <ProjectGuid>{5B4ABFA8-80B4-4225-AD92-6E818A7E4A15}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Elliptic</RootNamespace>
-    <AssemblyName>Elliptic</AssemblyName>
+    <RootNamespace>Elliptic2</RootNamespace>
+    <AssemblyName>Elliptic2</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
